# python-sqlserver-integration

./: .env.example  .gitignore  pyproject.toml
src/: main.py  orm_example.py  query_example.py
src/sql/: create_table.sql
